--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
         />
         <title>ADSAMBA.ERP</title>
 
+        <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/material.css">
+
         <link
             href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Roboto:ital,wght@0,500;1,700&display=swap"
             rel="stylesheet"
